fixed z-index for sliders
to go under mobile nav

--- a/src/styles/_movie-card.scss
+++ b/src/styles/_movie-card.scss
@@ -31,7 +31,7 @@
 }
 
 .sliders-container {
-  z-index: 10000;
+  z-index: 9997;
   @include flex-column;
   position: absolute;
 
